[gd_scene load_steps=9 format=3 uid="uid://cpvys6jpa05c0"]

[ext_resource type="Texture2D" uid="uid://y2qjkbbtkeku" path="res://addons/kenney_prototype_textures/dark/texture_08.png" id="1_5b834"]
[ext_resource type="Script" path="res://2d/nav_stress_test.gd" id="1_n5txc"]
[ext_resource type="PackedScene" uid="uid://ys3eyqjfmdum" path="res://2d/teleporter.tscn" id="4_tahg0"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_5dfq8"]
vertices = PackedVector2Array(240, -80, 240, 80, -240, 80, -240, -80)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-240, -80, -240, 80, 240, 80, 240, -80)])

[sub_resource type="NavigationPolygon" id="NavigationPolygon_aqn6f"]
vertices = PackedVector2Array(240, -80, 240, 80, -240, 80, -240, -80)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-240, -80, -240, 80, 240, 80, 240, -80)])

[sub_resource type="Animation" id="Animation_sauoh"]
resource_name = "Move"
length = 12.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Platform1:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6, 12),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(320, 160), Vector2(704, 160), Vector2(320, 160)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Platform2:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 6, 12),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(704, 480), Vector2(320, 480), Vector2(704, 480)]
}

[sub_resource type="Animation" id="Animation_0uhfs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Platform1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(320, 160)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Platform2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(704, 480)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_26eal"]
_data = {
"Move": SubResource("Animation_sauoh"),
"RESET": SubResource("Animation_0uhfs")
}

[node name="NavStressTest" type="Node2D"]
script = ExtResource("1_n5txc")
agents_per_tick = 10

[node name="Platform1" type="Polygon2D" parent="."]
texture_repeat = 2
position = Vector2(320, 160)
texture = ExtResource("1_5b834")
texture_scale = Vector2(16, 16)
polygon = PackedVector2Array(-256, -96, -256, 96, 256, 96, 256, -96)
uv = PackedVector2Array(-256, -96, -256, 96, 256, 96, 256, -96)

[node name="Spawner1" type="Marker2D" parent="Platform1" groups=["spawners"]]
position = Vector2(0, -32)

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="Platform1" groups=["valid_regions"]]
navigation_polygon = SubResource("NavigationPolygon_5dfq8")

[node name="Teleporter" parent="Platform1" instance=ExtResource("4_tahg0")]
position = Vector2(192, 32)
destination = NodePath("../../Platform2/Teleporter2")

[node name="Platform2" type="Polygon2D" parent="."]
texture_repeat = 2
position = Vector2(704, 480)
texture = ExtResource("1_5b834")
texture_scale = Vector2(16, 16)
polygon = PackedVector2Array(-256, -96, -256, 96, 256, 96, 256, -96)
uv = PackedVector2Array(-256, -96, -256, 96, 256, 96, 256, -96)

[node name="Spawner2" type="Marker2D" parent="Platform2" groups=["spawners"]]
position = Vector2(0, 32)

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="Platform2" groups=["valid_regions"]]
navigation_polygon = SubResource("NavigationPolygon_aqn6f")

[node name="Teleporter2" parent="Platform2" instance=ExtResource("4_tahg0")]
position = Vector2(-192, -32)
destination = NodePath("../../Platform1/Teleporter")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Move"
libraries = {
"": SubResource("AnimationLibrary_26eal")
}

[node name="SpawnTimer" type="Timer" parent="."]
process_callback = 0
autostart = true

[node name="AgentCountLabel" type="Label" parent="."]
offset_right = 76.0
offset_bottom = 26.0
text = "0"

[node name="NavigationLink2D" type="NavigationLink2D" parent="."]
position = Vector2(512, 320)
start_location = Vector2(0, -128)
end_location = Vector2(0, 128)

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
